--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,13 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Trace"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "super secret key super secret key super secret key super secret key super secret key super secret key",
+    "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
 }
